ripple-lib rename
ripple-lib rename

--- a/src/index.html
+++ b/src/index.html
@@ -520,7 +520,7 @@
         <script src="js/wordlist_english.js"></script>
         <script src="js/jsbip39.js"></script>
         <script src="js/lodash.js"></script>
-        <script src="js/ripple-0.22.0-keypair.js"></script>
+        <script src="js/ripple-0.22.0-modified.js"></script>
         <script src="js/jquery-3.2.1.js"></script>
         <script src="js/qrcode.js"></script>
         <script src="js/index.js"></script>
