v 0.3.0 - Support for Ledger Harware Wallet
v 0.3.0 - Support for Ledger Harware Wallet

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,9 @@
                     <a href="https://www.instagram.com/bithomp/" target="_blank">
                         <svg width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 896q0-106-75-181t-181-75-181 75-75 181 75 181 181 75 181-75 75-181zm138 0q0 164-115 279t-279 115-279-115-115-279 115-279 279-115 279 115 115 279zm108-410q0 38-27 65t-65 27-65-27-27-65 27-65 65-27 65 27 27 65zm-502-220q-7 0-76.5-.5t-105.5 0-96.5 3-103 10-71.5 18.5q-50 20-88 58t-58 88q-11 29-18.5 71.5t-10 103-3 96.5 0 105.5.5 76.5-.5 76.5 0 105.5 3 96.5 10 103 18.5 71.5q20 50 58 88t88 58q29 11 71.5 18.5t103 10 96.5 3 105.5 0 76.5-.5 76.5.5 105.5 0 96.5-3 103-10 71.5-18.5q50-20 88-58t58-88q11-29 18.5-71.5t10-103 3-96.5 0-105.5-.5-76.5.5-76.5 0-105.5-3-96.5-10-103-18.5-71.5q-20-50-58-88t-88-58q-29-11-71.5-18.5t-103-10-96.5-3-105.5 0-76.5.5zm768 630q0 229-5 317-10 208-124 322t-322 124q-88 5-317 5t-317-5q-208-10-322-124t-124-322q-5-88-5-317t5-317q10-208 124-322t322-124q88-5 317-5t317 5q208 10 322 124t124 322q5 88 5 317z" fill="#006b7d"/></svg>
                     </a>
+                    <a href="https://www.youtube.com/channel/UCTvrMnG-Tpqi5FN9zO7GcWw" target="_blank">
+                        <svg width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1099 1244v211q0 67-39 67-23 0-45-22v-301q22-22 45-22 39 0 39 67zm338 1v46h-90v-46q0-68 45-68t45 68zm-966-218h107v-94h-312v94h105v569h100v-569zm288 569h89v-494h-89v378q-30 42-57 42-18 0-21-21-1-3-1-35v-364h-89v391q0 49 8 73 12 37 58 37 48 0 102-61v54zm429-148v-197q0-73-9-99-17-56-71-56-50 0-93 54v-217h-89v663h89v-48q45 55 93 55 54 0 71-55 9-27 9-100zm338-10v-13h-91q0 51-2 61-7 36-40 36-46 0-46-69v-87h179v-103q0-79-27-116-39-51-106-51-68 0-107 51-28 37-28 116v173q0 79 29 116 39 51 108 51 72 0 108-53 18-27 21-54 2-9 2-58zm-608-913v-210q0-69-43-69t-43 69v210q0 70 43 70t43-70zm719 751q0 234-26 350-14 59-58 99t-102 46q-184 21-555 21t-555-21q-58-6-102.5-46t-57.5-99q-26-112-26-350 0-234 26-350 14-59 58-99t103-47q183-20 554-20t555 20q58 7 102.5 47t57.5 99q26 112 26 350zm-998-1276h102l-121 399v271h-100v-271q-14-74-61-212-37-103-65-187h106l71 263zm370 333v175q0 81-28 118-38 51-106 51-67 0-105-51-28-38-28-118v-175q0-80 28-117 38-51 105-51 68 0 106 51 28 37 28 117zm335-162v499h-91v-55q-53 62-103 62-46 0-59-37-8-24-8-75v-394h91v367q0 33 1 35 3 22 21 22 27 0 57-43v-381h91z" fill="#006b7d"/></svg>
+                    </a>
                     <a href="https://github.com/Bithomp" target="_blank">
                         <svg width="22" height="22" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z" fill="#006b7d"/></svg>
                     </a>
@@ -95,7 +98,7 @@
                 <br>
                 <b>Features</b><br>
                 - You can use this tool in two modes: online and offline.<br>
-                - Works with secret key or mnemonic (Hard Wallet).<br>
+                - Works with secret key, mnemonic and Ledger Hardware Wallet.<br>
                 - Multisignature signing in the Offline mode.<br>
                 - Send a Payment: XRP or any IOU.<br>
                 - Add or Remove a Trustline.<br>
@@ -141,7 +144,7 @@
 
                 <fieldset class="server">
                     <div>
-                        <input type="text" id="server" placeholder="Enter the xrp server here" value="wss://s1.ripple.com" spellcheck="false" />
+                        <input type="text" id="server" placeholder="Enter the xrp server here" value="wss://s1.ripple.com" spellcheck="false" class="bordered-centered" />
                         <input type="button" value="connect" id="server_connect" class="server-not-connected" />
                         <div class="feedback" id="server_feedback"></div>
                     </div>
@@ -155,30 +158,47 @@
                         <input type="radio" id="switch_secret" name="privkey_type" value="secret" checked="checked" autocomplete="new-password"/>
                         <label for="switch_secret">Paper wallet (secret key)</label>
                         <input type="radio" id="switch_mnemonic" name="privkey_type" value="mnemonic" />
-                        <label for="switch_mnemonic">Hard wallet (mnemonic)</label>
+                        <label for="switch_mnemonic">Passphrase (mnemonic)</label>
+                        <span class="online-fields">
+                            <span class="switch_hw hidden">
+                                <input type="radio" id="switch_hw" name="privkey_type" value="hw" />
+                                <label for="switch_hw">Ledger HW (hardware)</label>
+                            </span>
+                        </span>
                     </div>
 
                     <input type="hidden" id="address" />
                     <input type="hidden" id="privkey" />
                     <input type="hidden" id="pubkey" />
 
-                    <div class="mnemonic hidden">
+                    <div class="hw-fields hidden">
+                        <div class="ledgerhw-not-connected note bordered">
+                            1. Connect your Ledger Harware Wallet to this computer<br>
+                            2. Start Ripple app on the Hardware Wallet (1.0.3 or 1.0.4)<br>
+                            3. In the Ripple app, choose "Settings"<br>
+                            4. Set "Browser support" to "YES"<br>
+                            5. Press this button bellow "connect"<br>
+                            <center><input type="button" value="connect" id="ledgerhw_connect" /></center>
+                        </div>
+                    </div>
+
+                    <div class="mnemonic-fields hidden">
                         <textarea id="phrase" class="phrase" placeholder="Enter your mnemonic (e.g. 24 recovery words)"></textarea>
                     </div>
 
-                    <div class="secret">
-                        <input type="text" id="secret" placeholder="Enter your XRP secret here, i.e. sxxxxxxxxxxxxxxxxx" spellcheck="false" autocomplete="off" />
-                        <input type="text" id="secret_hidden" placeholder="*****************************" class="hidden" />
+                    <div class="secret-fields">
+                        <input type="text" id="secret" placeholder="Enter your XRP secret here, i.e. sxxxxxxxxxxxxxxxxx" spellcheck="false" autocomplete="off" class="bordered-centered" />
+                        <input type="text" id="secret_hidden" placeholder="*****************************" class="hidden bordered-centered" />
                     </div>
 
-                    <div class="feedback" id="feedback"></div>
+                    <div class="feedback orange" id="feedback"></div>
                     <div class="set-address hidden">
                         <label class="container container-set-address">
                             Sign on behalf of a different address
                             <input type="checkbox" id="set_address">
                             <span class="checkmark"></span>
                         </label>
-                        <input type="text" id="sign_address" placeholder="Enter a XRP address" class="sign-address hidden" spellcheck="false" />
+                        <input type="text" id="sign_address" placeholder="Enter a XRP address" class="bordered-centered sign-address hidden" spellcheck="false" />
                         <div class="offline-fields hidden">
                             <label class="container container-multisig sign-address hidden">
                                 Multi-signatute
@@ -199,12 +219,14 @@
                         <div class="switch-field">
                             <input type="radio" id="switch_payment" name="tx_type" value="payment" checked/>
                             <label for="switch_payment">Payment</label>
-                            <input type="radio" id="switch_trustline" name="tx_type" value="trustline" />
-                            <label for="switch_trustline">Trustline</label>
-                            <input type="radio" id="switch_settings" name="tx_type" value="settings" />
-                            <label for="switch_settings">Settings</label>
+                            <div class="inline secret-fields mnemonic-fields hidden">
+                                <input type="radio" id="switch_trustline" name="tx_type" value="trustline" />
+                                <label for="switch_trustline">Trustline</label>
+                                <input type="radio" id="switch_settings" name="tx_type" value="settings" />
+                                <label for="switch_settings">Settings</label>
+                            </div>
                         </div>
-                        <div class="switch-field">
+                        <div class="switch-field secret-fields mnemonic-fields hidden">
                             <input type="radio" id="switch_order" name="tx_type" value="order" />
                             <label for="switch_order">Order</label>
                             <input type="radio" id="switch_escrow" name="tx_type" value="escrow" />
@@ -232,9 +254,14 @@
                             </div>
                             <div>
                                 <div class="left">Currency:</div>
-                                <div class="right"><input type="text" id="payment_currency" value="XRP" spellcheck="false" /></div>
+                                <div class="right secret-fields mnemonic-fields hidden">
+                                    <input type="text" id="payment_currency" value="XRP" spellcheck="false" />
+                                </div>
+                                <div class="right hw-fields hidden">
+                                    <input type="text" id="payment_currency" value="XRP" spellcheck="false" readonly="readonly"/>
+                                </div>
                             </div>
-                            <div>
+                            <div class="secret-fields mnemonic-fields hidden">
                                 <div class="left">Counterparty:</div>
                                 <div class="right"><input type="text" id="payment_counterparty" placeholder="If the currency is different from XRP" spellcheck="false" /></div>
                             </div>
@@ -285,20 +312,20 @@
                                 <div class="orange note">
                                     Here you can assign a domain that owns your account.
                                 </div>
-                                <input type="text" id="settings_domain" placeholder="Domain name, e.g. mysite.com" spellcheck="false" />
+                                <input type="text" id="settings_domain" placeholder="Domain name, e.g. mysite.com" spellcheck="false" class="bordered-centered" />
                                 <br><br>
                             </div>
                             <div class="settings-gravatar hidden">
                                 <div class="orange note">
                                     Enter a <a href="https://gravatar.com" target="_blank">Gravatar</a> email address for your XRP wallet in order to display your avatar in the Bithomp Explorer and in other XRP software.
                                 </div>
-                                <input type="text" id="settings_email" placeholder="Gravatar email" spellcheck="false" />
+                                <input type="text" id="settings_email" placeholder="Gravatar email" spellcheck="false" class="bordered-centered" />
                             </div>
                             <div class="settings-messageKey hidden">
                                 <div class="orange note">
                                     Public key for sending encrypted messages to this account. Conventionally, it should be a secp256k1 key, the same encryption that is used by the rest of Ripple.
                                 </div>
-                                <input type="text" id="settings_messageKey" placeholder="Message key" spellcheck="false" />
+                                <input type="text" id="settings_messageKey" placeholder="Message key" spellcheck="false" class="bordered-centered" />
                             </div>
                             <div class="settings-regularKey hidden">
                                 <div class="orange note">
@@ -308,7 +335,7 @@
                                         Please do not use this tool unless you know what you are doing!
                                     </span>
                                 </div>
-                                <input type="text" id="settings_regularKey" placeholder="Regular key" spellcheck="false" />
+                                <input type="text" id="settings_regularKey" placeholder="Regular key" spellcheck="false" class="bordered-centered" />
                             </div>
                             <div class="settings-signers hidden">
                                 <div class="note">
@@ -326,7 +353,7 @@
                                     THRESHOLD - a target number for the signer weights. A multi-signature from this list is valid only if the sum weights of the signatures provided is equal or greater than this value.
                                 </div>
 
-                                <input type="text" id="settings_signers_threshold" placeholder="Threshold" />
+                                <input type="text" id="settings_signers_threshold" placeholder="Threshold" class="bordered-centered" />
                                 <div><br><center>List of Signers</center><br></div>
 
                                 <div class="double-fileds">
@@ -334,13 +361,13 @@
                                         <input type="text" name="settings_signers_weight" placeholder="Weight" />
                                     </div>
                                     <div class="right">
-                                        <input type="text" name="settings_signers_address" placeholder="Address" />
+                                        <input type="text" name="settings_signers_address" placeholder="Address" spellcheck="false" />
                                     </div>
                                 </div>
 
                                 <div class="double-fileds">
                                     <div class="left">
-                                        <input type="text" name="settings_signers_weight" placeholder="Weight" />
+                                        <input type="text" name="settings_signers_weight" placeholder="Weight" spellcheck="false" />
                                     </div>
                                     <div class="right">
                                         <input type="text" name="settings_signers_address" placeholder="Address" />
@@ -352,7 +379,7 @@
                                         <input type="text" name="settings_signers_weight" placeholder="Weight" />
                                     </div>
                                     <div class="right">
-                                        <input type="text" name="settings_signers_address" placeholder="Address" />
+                                        <input type="text" name="settings_signers_address" placeholder="Address" spellcheck="false" />
                                     </div>
                                 </div>
 
@@ -440,9 +467,11 @@
                         </div>
 
                         <div class="fields-wide">
-                            <div class="payment-fields escrow-fields hidden">
-                                <div class="left">Memo (optional):</div>
-                                <div class="right"><input type="text" id="memo" placeholder="message" /></div>
+                            <div class="secret-fields mnemonic-fields hidden">
+                                <div class="payment-fields escrow-fields hidden">
+                                    <div class="left">Memo (optional):</div>
+                                    <div class="right"><input type="text" id="memo" placeholder="message" /></div>
+                                </div>
                             </div>
 
                             <div class="note offline-fields hidden">
@@ -522,6 +551,7 @@
         <script src="js/lodash.js"></script>
         <script src="js/ripple-0.22.0-modified.js"></script>
         <script src="js/jquery-3.2.1.js"></script>
+        <script src="js/bithomphw.min.js"></script>
         <script src="js/qrcode.js"></script>
         <script src="js/index.js"></script>
     </body>
