--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ a:hover {
                             2. Start Ripple app on the Hardware Wallet (1.0.3 or 1.0.4)<br>
                             3. In the Ripple app, choose "Settings"<br>
                             4. Set "Browser support" to "YES"<br>
-                            5. Press this button bellow "connect"<br>
+                            5. Press this button below "connect"<br>
                             <center><input type="button" value="connect" id="ledgerhw_connect" /></center>
                         </div>
                     </div>
@@ -91283,7 +91283,7 @@ var QRCode;
 </script>
         <script>(function() {
 
-var version = '0.3.0';
+var version = '0.3.1';
 var api = new ripple.RippleAPI();
 var mnemonic = new Mnemonic("english");
 var seed = null;
