--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                             2. Start Ripple app on the Hardware Wallet (1.0.3 or 1.0.4)<br>
                             3. In the Ripple app, choose "Settings"<br>
                             4. Set "Browser support" to "YES"<br>
-                            5. Press this button bellow "connect"<br>
+                            5. Press this button below "connect"<br>
                             <center><input type="button" value="connect" id="ledgerhw_connect" /></center>
                         </div>
                     </div>
