--- a/src/index.html
+++ b/src/index.html
@@ -173,11 +173,9 @@
 
                     <div class="hw-fields hidden">
                         <div class="ledgerhw-not-connected note bordered">
-                            1. Connect your Ledger Harware Wallet to this computer<br>
-                            2. Start Ripple app on the Hardware Wallet (1.0.3 or 1.0.4)<br>
-                            3. In the Ripple app, choose "Settings"<br>
-                            4. Set "Browser support" to "YES"<br>
-                            5. Press this button below "connect"<br>
+                            1. Connect Ledger Wallet to your computer<br>
+                            2. Start XRP app on it (1.0.6 or higher)<br>
+                            3. Press "Connect" button<br>
                             <center><input type="button" value="connect" id="ledgerhw_connect" /></center>
                         </div>
                     </div>
